# mentos

./: .env.example  .gitignore  .neon  DEPLOYMENT_NOTES.md  README.md  pyproject.toml
docs/: DEPLOY_FLY_NEON.md  breakthroughs.md  client-server-architecture.md
insights/cards/: big_ticket_sanity_check.json  cash_idle.json  convenience_tax.json  daily_indulgences_add_up.json  delivery_creep.json  eating_out_frequency.json  late_night_spend.json  on_plan_praise.json  payday_surge.json  premium_everyday_bias.json  subscription_creep.json
ios/: README.md
ios/mentos/: App.swift  README.md  RootView.swift  SessionStore.swift
migrations/: 001_init.sql  002_breakthroughs.sql  003_goal_drift.sql
scripts/: deploy_fly_neon.sh  gen_secrets.sh  smoke_test.sh  test_llm_integration.py
scripts/mocks/: monzo_accounts.json  monzo_pots.json  monzo_transactions.json
server/: .env.deploy  .env.deploy.example  .env.example  Dockerfile  fly.toml  requirements.txt  start-web.sh  start-worker.sh
server/alembic/: README  env.py
server/app/: main.py
server/tests/: conftest.py  test_auth.py  test_devices_and_tenant.py  test_health.py  test_monzo.py  test_timeline_monthly.py  test_timeline_quarterly.py  test_timeline_streaks.py  test_timeline_weekly.py  test_timeline_yearly.py
src/mentos/: aggregates.py  breakthroughs.py  chatgpt.py  cli.py  config.py  crypto.py  db.py  drift.py  goals.py  heuristics.py  jobs.py  monzo_client.py  notifications.py  reports.py  (+5 more)
src/mentos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_scenarios.py
(+159 files in other folders)
