[project]
name = "mentos"
version = "0.1.0"
description = "Local-first personal finance nudges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.3",
  "cryptography>=43.0.1",
]

[project.scripts]
mentos = "mentos.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
