[project]
name = "mentos"
version = "0.1.0"
description = "Local-first personal finance nudges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests==2.32.3",
  "cryptography==44.0.1",
  "python-dotenv==1.0.1",
  "rich==13.9.4",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic-settings==2.7.1",
  "sqlalchemy==2.0.37",
  "alembic==1.14.0",
  "psycopg2-binary==2.9.10",
  "pyjwt==2.10.1",
  "python-jose==3.3.0",
  "httpx==0.28.1",
  "apns2==0.7.2",
  "apscheduler==3.10.4",
  "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
  "freezegun==1.5.1",
  "respx==0.22.0",
]

[project.scripts]
mentos = "mentos.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
